@@ -2,52 +2,9 @@ package com.roombooking.model;
 
 import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import module java.base;
 
-public class Booking {
-
-    private final String id;
-    private final Room room;
-    private final Person organiser;
-    private final List<Person> attendees;
-    private final String startTime;
-    private final String endTime;
-
-    public Booking(final String id, final Room room, final Person organiser, final List<Person> attendees, final String startTime, final String endTime) {
-        this.id = id;
-        this.room = room;
-        this.organiser = organiser;
-        this.attendees = attendees;
-        this.startTime = startTime;
-        this.endTime = endTime;
-    }
-
-    public String getId() {
-        return id;
-    }
-
-    public Room getRoom() {
-        return room;
-    }
-
-    public Person getOrganiser() {
-        return organiser;
-    }
-
-    public List<Person> getAttendees() {
-        return attendees;
-    }
-
-    public String getStartTime() {
-        return startTime;
-    }
-
-    public String getEndTime() {
-        return endTime;
-    }
+public record Booking(String id, Room room, Person organiser, List<Person> attendees, String startTime, String endTime) {
 
     public Map<String, AttributeValue> toItem() {
         final Map<String, AttributeValue> item = new HashMap<>();
@@ -57,7 +14,7 @@ public class Booking {
         item.put("attendees", AttributeValue.builder()
                 .l(attendees.stream()
                         .map(person -> AttributeValue.builder().m(person.toItem()).build())
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build());
         item.put("startTime", AttributeValue.builder().s(startTime).build());
         item.put("endTime", AttributeValue.builder().s(endTime).build());
@@ -69,7 +26,7 @@ public class Booking {
         map.put("id", id);
         map.put("room", room.toResponseMap());
         map.put("organiser", organiser.toResponseMap());
-        map.put("attendees", attendees.stream().map(Person::toResponseMap).collect(Collectors.toList()));
+        map.put("attendees", attendees.stream().map(Person::toResponseMap).toList());
         map.put("startTime", startTime);
         map.put("endTime", endTime);
         return map;
@@ -78,7 +35,7 @@ public class Booking {
     public static Booking fromItem(final Map<String, AttributeValue> item) {
         final List<Person> attendees = item.get("attendees").l().stream()
                 .map(av -> Person.fromItem(av.m()))
-                .collect(Collectors.toList());
+                .toList();
         return new Booking(
                 item.get("id").s(),
                 Room.fromItem(item.get("room").m()),
